Produce a jlink assembly on jdk9+